--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZSFKyxqJQ/">
+<meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZSYJPtwT4/">
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
-<p>If you are not redirected automatically, <a href="https://vt.tiktok.com/ZSFKyxqJQ/">click here</a>.</p>
+<p>If you are not redirected automatically, <a href="https://vt.tiktok.com/ZSYJPtwT4/">click here</a>.</p>
 </body>
 </html>
