--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0;url=https://www.tiktok.com/@.anehgamingofficial/video/7421129410247445768">
+<meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZS2tJcAFs/">
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
-<p>If you are not redirected automatically, <a href="https://www.tiktok.com/@.anehgamingofficial/video/7421129410247445768">click here</a>.</p>
+<p>If you are not redirected automatically, <a href="https://vt.tiktok.com/ZS2tJcAFs/">click here</a>.</p>
 </body>
 </html>
