--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   gtag('config', 'G-RZZJQ4N4KG');
 </script>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZS27dkg4r//">
+<meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZS23nG4Qn/">
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
-<p>If you are not redirected automatically, <a href="https://vt.tiktok.com/ZS27dkg4r/">click here</a>.</p>
+<p>If you are not redirected automatically, <a href="https://vt.tiktok.com/ZS23nG4Qn/">click here</a>.</p>
 </body>
 </html>
