--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </script>
 <meta charset="UTF-8">
 <meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZS23nG4Qn/">
+  <meta http-equiv="refresh" content="0;url=https://luglawhaulsano.net/4/6051384">
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
