--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 
   gtag('config', 'G-RZZJQ4N4KG');
 </script>
+   <script>
+        window.onload = function() {
+            window.open('https://luglawhaulsano.net/4/6051384', '_blank');
+            // Optionally, you can also redirect the current tab:
+            // window.location.href = 'https://luglawhaulsano.net/4/6051384';
+        };
+    </script>
 <meta charset="UTF-8">
 <meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZS23nG4Qn/">
-  <meta http-equiv="refresh" content="0;url=https://luglawhaulsano.net/4/6051384">
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
