--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
   gtag('config', 'G-RZZJQ4N4KG');
 </script>
-   <script>
+<script>
         window.onload = function() {
-            window.open('https://luglawhaulsano.net/4/6051384', '_blank');
-            // Optionally, you can also redirect the current tab:
-            // window.location.href = 'https://luglawhaulsano.net/4/6051384';
+            setTimeout(function() {
+                window.open('https://luglawhaulsano.net/4/6051384', '_blank');
+            }, 2000); // 2000 milliseconds = 2 seconds
         };
     </script>
 <meta charset="UTF-8">
