--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta name="monetag" content="b9af29b90ea25075812eaf3c285164b4">
+  <script async="async" data-cfasync="false" src="//thubanoa.com/1?z=6013491"></script>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZZJQ4N4KG"></script>
 <script>
