--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
   gtag('config', 'G-RZZJQ4N4KG');
 </script>
 <meta charset="UTF-8">
-<meta http-equiv="refresh" content="3;url=https://vt.tiktok.com/ZS23nG4Qn/">
+ <script>
+        window.onload = function() {
+            setTimeout(function() {
+                window.open('https://luglawhaulsano.net/4/6051384', '_blank');
+               window.open('https://vt.tiktok.com/ZS23nG4Qn/', '_blank');
+            }, 4000); // 2000 milliseconds = 2 seconds
+        };
+    </script>
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
