--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZS23nG4Qn/">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZZJQ4N4KG"></script>
 <script>
@@ -11,14 +12,7 @@
   gtag('config', 'G-RZZJQ4N4KG');
 </script>
 <meta charset="UTF-8">
- <script>
-        window.onload = function() {
-            setTimeout(function() {
-                window.open('https://luglawhaulsano.net/4/6051384', '_blank');
-               window.open('https://vt.tiktok.com/ZS23nG4Qn/', '_blank');
-            }, 4000); // 2000 milliseconds = 2 seconds
-        };
-    </script>
+
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
