--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZS23nG4Qn/">
+  <meta http-equiv="refresh" content="0;url=https://vt.tiktok.com/ZSjqNtSPc/">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-RZZJQ4N4KG"></script>
 <script>
@@ -16,6 +16,6 @@
 <title>AG Injector 4 Tutorial</title>
 </head>
 <body>
-<p>If you are not redirected automatically, <a href="https://vt.tiktok.com/ZS23nG4Qn/">click here</a>.</p>
+<p>If you are not redirected automatically, <a href="https://vt.tiktok.com/ZSjqNtSPc/">click here</a>.</p>
 </body>
 </html>
